WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138602
DataDetectors' menu items aren't presented in the telephone number menu
https://bugs.webkit.org/show_bug.cgi?id=138602
Summary
DataDetectors' menu items aren't presented in the telephone number menu
Tim Horton
Reported
2014-11-10 23:30:31 PST
DataDetectors' menu items aren't presented in the telephone number menu
Attachments
Patch
(9.68 KB, patch)
2014-11-10 23:30 PST
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-11-10 23:30:57 PST
Created
attachment 241338
[details]
Patch
Tim Horton
Comment 2
2014-11-10 23:31:18 PST
<
rdar://problem/18866308
>
Conrad Shultz
Comment 3
2014-11-10 23:38:26 PST
Comment on
attachment 241338
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=241338&action=review
> Source/WebKit2/Platform/mac/MenuUtilities.mm:117 > + return [menu numberOfItems] ? menu : nil;
Did you test whether this check is actually needed? In many cases, an empty NSMenu will behave as if you had no menu at all.
Tim Horton
Comment 4
2014-11-10 23:44:23 PST
(In reply to
comment #3
)
> Comment on
attachment 241338
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=241338&action=review
> > > Source/WebKit2/Platform/mac/MenuUtilities.mm:117 > > + return [menu numberOfItems] ? menu : nil; > > Did you test whether this check is actually needed? In many cases, an empty > NSMenu will behave as if you had no menu at all.
I did not, and you're probably right. I just translated.
Tim Horton
Comment 5
2014-11-11 12:12:42 PST
http://trac.webkit.org/changeset/175966
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug